# rdma-project

./: .gitignore  .gitmodules  large_local.txt  read2.txt  reads-both-small.txt  results.txt  small_local.txt  tput2.p  two_sided.txt  writes-both-small.txt  writes-small.txt  writes.txt
ConnectionExperiments/: .gitignore  CMakeLists.txt  Client.cpp  Client.h  RdmaClient.cpp  RdmaClient.h  RdmaServer.cpp  RdmaServer.h  RunClient.cpp  RunClient.h  RunServer.cpp  RunServer.h  Server.cpp  Server.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  experiment_type.h  main.cpp  utils.cpp  utils.h
ConnectionExperiments/infinity/: CMakeLists.txt
ConnectionExperiments/infinity/core/: Configuration.h
ConnectionExperiments/infinity/queues/: QueuePair.cpp  QueuePairFactory.cpp  QueuePairFactory.h
ConnectionExperiments/infinity/utils/: Debug.h
QueueExperiments/: BCLQueue.cpp  BCLQueue.h  CMakeLists.txt  Dockerfile  TCPQueue.cpp  TCPQueue.h  main.cpp  utils.cpp  utils.h
QueueExperiments/bcl_tests/: BCLTests.cpp
QueueExperiments/boost_tests/: BoostTests.cpp
QueueExperiments/build-release/: CMakeCache.txt  Makefile  QueueExperiments.cbp  cmake_install.cmake
QueueExperiments/build-release-client/: BoostExperiments  CMakeCache.txt  Makefile  Project.cbp  QueueExperiments  QueueExperiments.cbp  cmake_install.cmake
QueueExperiments/build-release-server/: CMakeCache.txt  Makefile  QueueExperiments  QueueExperiments.cbp  cmake_install.cmake
QueueExperiments/lib/bcl/: bcl.hpp
QueueExperiments/lib/bcl/backends/mpi/: backend.hpp
QueueExperiments/lib/bcl/containers/: Array.hpp  CircularQueue.hpp  Container.hpp
QueueExperiments/lib/bcl/core/: malloc.hpp
RDMAHelloWorldC/: .gitignore  CMakeLists.txt  main.cpp
ThroughputExperiments/: CMakeLists.txt  Client.cpp  Client.h  Server.h  main.cpp  utils.cpp  utils.h
data/: gas_local_pop.txt  gas_local_push.txt  gas_remote_pop.txt  gas_remote_push.txt  lat_pop_rvl.p  lat_push_rvl.p  local_pop_lat.p  local_pop_lat_small.p  local_pop_ops.p  local_pop_tp.p  local_push_lat.p  local_push_ops.p  local_push_tp.p  mpi_eth_local_pop.txt  mpi_eth_local_push.txt  mpi_eth_remote_pop.txt  mpi_eth_remote_push.txt  mpi_ib_local_pop.txt  mpi_ib_local_push.txt  mpi_ib_remote_pop.txt  mpi_ib_remote_push.txt  ops_pop_rvl.p  ops_push_rvl.p  rdma_op_lat.p  rdma_op_lat_high.p  rdma_op_tp.p  rdma_read_latency.txt  rdma_read_throughput.txt  rdma_tcp_lat_comp.p  rdma_tcp_lat_low.p  rdma_tcp_tp_comp.p  rdma_two_sided_latency.txt  rdma_two_sided_throughput.txt  rdma_write_latency.txt  rdma_write_throughput.txt  remote_pop_lat.p  remote_pop_ops.p  remote_pop_tp.p  remote_push_lat.p  remote_push_ops.p  (+8 more)
results/latency/: tcp_latency.txt  tcp_latency_extra_copy.txt
results/throughput/: tcp_throghput.txt  tcp_throghput_extra_copy.txt
